Fix the resizer issue with the jump value

--- a/src/style/reset.css
+++ b/src/style/reset.css
@@ -52,3 +52,7 @@ table {
 img {
     -webkit-user-drag: none;
 }
+
+* {
+    box-sizing: border-box;
+}
